first crack at email pdf futures charts

--- a/notebooks/1.2 - Load Futures Data.ipynb
+++ b/notebooks/1.2 - Load Futures Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "import quandl\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import boto3"
+    "import boto3\n",
+    "from datetime import date, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
        "4  2015-02-12  2018-12-05  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +586,7 @@
        "32               Z             HKNUZ         HKNUZ        1960  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +609,7 @@
        "9320"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,11 +618,18 @@
     "pd.options.display.max_rows = 999\n",
     "futures_codes = cme_futures['Futures Symbol'].tolist()\n",
     "contract_codes = []\n",
+    "is_update = False\n",
     "\n",
     "for futures_code in futures_codes:\n",
     "    length = (cme_metadata['code'].str.len() == len(futures_code) + 5)\n",
     "    starts_with = cme_metadata['code'].str.startswith(futures_code)\n",
-    "    results = cme_metadata[length & starts_with]['code'].tolist()\n",
+    "    if is_update:\n",
+    "        dt = (date.today() - timedelta(3*365/12)).isoformat()\n",
+    "    else:\n",
+    "        dt = '1900-01-01'\n",
+    "    date_filter = cme_metadata['to_date'] >= dt\n",
+    "    \n",
+    "    results = cme_metadata[length & starts_with & date_filter]['code'].tolist()\n",
     "    contract_codes.extend(results)\n",
     "\n",
     "len(contract_codes)"
